test/corpus/destroy_statement.txt
===
DESTROY Statement
===

destroy someObject

---

(source_file
  (destroy_statement
    (identifier)))

===
DESTROY Statement - Semicolon
===

destroy someObject;

---

(source_file
  (destroy_statement
    (identifier)))
