test/corpus/identifiers.txt
===
Valid identifiers
===
name
_value
max_value$1
salary%increase
user-id
part#number123

---

(source_file
    (expression_statement
            (identifier))
    (expression_statement
            (identifier))
    (expression_statement
            (identifier))
    (expression_statement
            (identifier))
    (expression_statement
            (identifier))
    (expression_statement
            (identifier)))
