test/corpus/labels.txt
===
Simple Label
===

start:
func_call()

---

(source_file
    (label_statement
        name: (identifier))
    (expression_statement
        (expression
            (call_expression
                function: (identifier)))))
