test/corpus/throw_statement.txt
===
THROW Statement
===

throw someException

---

(source_file
  (throw_statement
    (expression
      (identifier))))

===
THROW Statement - Semicolon
===

throw someException;

---

(source_file
  (throw_statement
    (expression
      (identifier))))
